syntax = "proto3";

package dalalstreet.socketapi;

import "actions/BuyStocksFromExchange.proto";
import "actions/CancelAskOrder.proto";
import "actions/CancelBidOrder.proto";
import "actions/Login.proto";
import "actions/Logout.proto";
import "actions/MortgageStocks.proto";
import "actions/PlaceAskOrder.proto";
import "actions/PlaceBidOrder.proto";
import "actions/RetrieveMortgageStocks.proto";
import "actions/Subscribe.proto";
import "actions/Unsubscribe.proto";

import "datastreams/DataStreamType.proto";
import "datastreams/MarketDepth.proto";
import "datastreams/Transactions.proto";
import "datastreams/Notifications.proto";
import "datastreams/StockPrices.proto";
import "datastreams/StockExchange.proto";
import "datastreams/MarketEvents.proto";

message Request {
    string request_id = 1;
    string session_id = 2;

    oneof request {
		actions.BuyStocksFromExchangeRequest buy_stocks_from_exchange_request = 3;
		actions.CancelAskOrderRequest cancel_ask_order_request = 4;
		actions.CancelBidOrderRequest cancel_bid_order_request = 5;
		actions.LoginRequest login_request = 6;
		actions.LogoutRequest logout_request = 7;
		actions.MortgageStocksRequest mortgage_stocks_request = 8;
		actions.PlaceAskOrderRequest place_ask_order_request = 9;
		actions.PlaceBidOrderRequest place_bid_order_request = 10;
		actions.RetrieveMortgageStocksRequest retrieve_mortgage_stocks_request = 11;
		actions.SubscribeRequest subscribe_request = 12;
		actions.UnsubscribeRequest unsubscribe_request = 13;
    }
}

message Response {
    string request_id = 1;

    oneof response {
		actions.BuyStocksFromExchangeResponse buy_stocks_from_exchange_response = 3;
		actions.CancelAskOrderResponse cancel_ask_order_response = 4;
		actions.CancelBidOrderResponse cancel_bid_order_response = 5;
		actions.LoginResponse login_response = 6;
		actions.LogoutResponse logout_response = 7;
		actions.MortgageStocksResponse mortgage_stocks_response = 8;
		actions.PlaceAskOrderResponse place_ask_order_response = 9;
		actions.PlaceBidOrderResponse place_bid_order_response = 10;
		actions.RetrieveMortgageStocksResponse retrieve_mortgage_stocks_response = 11;
		actions.SubscribeResponse subscribe_response = 12;
		actions.UnsubscribeResponse unsubscribe_response = 13;
    }
}

message DataStreamUpdate {
    datastreams.DataStreamType data_stream_type = 1;
    string data_stream_id = 2;

    oneof update {
        datastreams.MarketDepthUpdate market_depth_update = 3;
        datastreams.TransactionUpdate transactions_update = 4;
        datastreams.NotificationUpdate notifications_update = 5;
        datastreams.StockPricesUpdate stock_prices_update = 6;
        datastreams.MarketEventUpdate market_events_update = 7;
        datastreams.StockExchangeUpdate stock_exchange_update = 8;
    }
}

message DalalMessage {
    oneof type {
        Request request = 1;
        Response response = 2;
        DataStreamUpdate data_stream_update = 3;
    }
}
